[gd_scene load_steps=20 format=3 uid="uid://d0ffghpeftx5b"]

[ext_resource type="Script" path="res://systems/weather_system/WeatherSystem.gd" id="1_dtuo3"]
[ext_resource type="PackedScene" uid="uid://byopxfuquatx5" path="res://systems/weather_system/weather_types/WeatherRain.tscn" id="2_lk5vm"]
[ext_resource type="Script" path="res://systems/weather_system/WeatherManager.gd" id="3_8s3jg"]
[ext_resource type="PackedScene" uid="uid://sa0vd70lwphd" path="res://systems/weather_system/weather_types/WeatherSnow.tscn" id="3_a8dt6"]
[ext_resource type="Script" path="res://systems/weather_system/WeatherModule.gd" id="4_64om7"]
[ext_resource type="PackedScene" uid="uid://xucpgvatghij" path="res://systems/weather_system/weather_types/WeatherWind.tscn" id="4_svtc0"]
[ext_resource type="Script" path="res://systems/weather_system/WeatherInspector.gd" id="5_wpe37"]
[ext_resource type="Texture2D" uid="uid://dyg23c5msxf5c" path="res://logo.png" id="8_heaeu"]
[ext_resource type="Script" path="res://systems/weather_system/camera.gd" id="9_wq5i0"]
[ext_resource type="Script" path="res://systems/weather_system/WaterPuddle.gd" id="10_5an84"]
[ext_resource type="Script" path="res://systems/weather_system/Humidity.gd" id="11_nmlqm"]
[ext_resource type="Script" path="res://systems/weather_system/Heat.gd" id="12_73asx"]
[ext_resource type="Script" path="res://systems/weather_system/CloudDrawer.gd" id="13_wwyc4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rgyb0"]
size = Vector2(672, 64)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_2yh4k"]
polygon = PackedVector2Array(-50, -44, 641, -43, 648, 51, -37, 51, -408, 57, -406, -9, -47, -10)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_4hp6j"]
polygon = PackedVector2Array(-16, -4.25, 4.25, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2v2hn"]
texture = ExtResource("8_heaeu")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/occlusion_layer_0/polygon = SubResource("OccluderPolygon2D_4hp6j")

[sub_resource type="TileSet" id="TileSet_i3bfe"]
tile_size = Vector2i(32, 32)
occlusion_layer_0/light_mask = 1
sources/1 = SubResource("TileSetAtlasSource_2v2hn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_es8a2"]
bg_color = Color(0.6, 0.796078, 0.6, 0.231373)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(7.21961e-06, 0.950801, 0.548179, 1)

[node name="WeatherSystem" type="Node2D" groups=["WeatherSystem"]]
script = ExtResource("1_dtuo3")
weather_scenes = Array[PackedScene]([null, ExtResource("2_lk5vm"), ExtResource("3_a8dt6"), ExtResource("4_svtc0")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="WeatherInspector" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 236.0
offset_bottom = 121.0
script = ExtResource("5_wpe37")

[node name="Properties" type="VBoxContainer" parent="CanvasLayer/WeatherInspector"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Position" type="Label" parent="CanvasLayer/WeatherInspector/Properties"]
layout_mode = 2

[node name="Moisture" type="HBoxContainer" parent="CanvasLayer/WeatherInspector/Properties"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/WeatherInspector/Properties/Moisture"]
layout_mode = 2
text = "Total moisture: "

[node name="Value" type="SpinBox" parent="CanvasLayer/WeatherInspector/Properties/Moisture"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
editable = false
suffix = "px²"

[node name="MaxMoisture" type="HBoxContainer" parent="CanvasLayer/WeatherInspector/Properties"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/WeatherInspector/Properties/MaxMoisture"]
layout_mode = 2
text = "max moisture: "

[node name="Value" type="SpinBox" parent="CanvasLayer/WeatherInspector/Properties/MaxMoisture"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
editable = false
suffix = "px²"

[node name="SaturatedMoisture" type="HBoxContainer" parent="CanvasLayer/WeatherInspector/Properties"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/WeatherInspector/Properties/SaturatedMoisture"]
layout_mode = 2
text = "Saturated moisture"

[node name="Value" type="SpinBox" parent="CanvasLayer/WeatherInspector/Properties/SaturatedMoisture"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
editable = false
suffix = "px²"

[node name="Temperature" type="HBoxContainer" parent="CanvasLayer/WeatherInspector/Properties"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/WeatherInspector/Properties/Temperature"]
layout_mode = 2
text = "Temperature:"

[node name="Value" type="SpinBox" parent="CanvasLayer/WeatherInspector/Properties/Temperature"]
layout_mode = 2
step = 0.1
allow_greater = true
allow_lesser = true
editable = false
suffix = "Cº"

[node name="WeatherManager" type="Node2D" parent="."]
script = ExtResource("3_8s3jg")

[node name="WeatherModule" type="Node2D" parent="."]
script = ExtResource("4_64om7")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(530, 595)

[node name="Logo" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(298, -16)
scale = Vector2(10.875, 1)
texture = ExtResource("8_heaeu")

[node name="Logo2" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-57, 21)
scale = Vector2(10.875, 1)
texture = ExtResource("8_heaeu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(287, -13)
shape = SubResource("RectangleShape2D_rgyb0")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-68, 25)
shape = SubResource("RectangleShape2D_rgyb0")

[node name="LightOccluder2D" type="LightOccluder2D" parent="StaticBody2D"]
occluder = SubResource("OccluderPolygon2D_2yh4k")

[node name="MainCamera" type="Camera2D" parent="."]
unique_name_in_owner = true
position = Vector2(577, 333)
zoom = Vector2(0.2, 0.2)
script = ExtResource("9_wq5i0")
movement_speed = 1200.0

[node name="Land" type="TileMap" parent="."]
tile_set = SubResource("TileSet_i3bfe")
format = 2
layer_0/tile_data = PackedInt32Array(1114127, 1, 0, 1114128, 1, 0, 1114129, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1114134, 1, 0, 1114133, 1, 0, 1114132, 1, 0, 1114131, 1, 0, 1114130, 1, 0, 1114126, 1, 0, 1114125, 1, 0, 1179662, 1, 0, 1179663, 1, 0, 1179664, 1, 0, 1245197, 1, 0, 1245196, 1, 0, 1245195, 1, 0, 1245194, 1, 0, 1245193, 1, 0, 1245192, 1, 0, 1245191, 1, 0, 1245190, 1, 0, 1245189, 1, 0, 1245198, 1, 0, 1179656, 1, 0, 1179657, 1, 0, 1179658, 1, 0, 1179659, 1, 0, 1179660, 1, 0, 1179661, 1, 0, 1310721, 1, 0, 1310722, 1, 0, 1310723, 1, 0, 1310719, 1, 0, 1310718, 1, 0, 1376254, 1, 0, 1376255, 1, 0, 1310720, 1, 0, 1310724, 1, 0, 1310725, 1, 0, 1310726, 1, 0, 1310727, 1, 0, 1310728, 1, 0, 1179653, 1, 0, 1179654, 1, 0, 1179655, 1, 0, 1310729, 1, 0, 1310730, 1, 0, 1310731, 1, 0, 1310732, 1, 0, 1310733, 1, 0, 1310734, 1, 0, 1310735, 1, 0, 1310736, 1, 0, 1310737, 1, 0, 1310738, 1, 0, 1310739, 1, 0, 1310740, 1, 0, 1310741, 1, 0, 1310742, 1, 0, 1310743, 1, 0, 1310744, 1, 0, 1245205, 1, 0, 1245204, 1, 0, 1245203, 1, 0, 1245202, 1, 0, 1245201, 1, 0, 1245200, 1, 0, 1245199, 1, 0, 1245206, 1, 0, 1245207, 1, 0, 1245208, 1, 0, 1245209, 1, 0, 1310745, 1, 0, 1310746, 1, 0, 1310747, 1, 0, 1310748, 1, 0, 1310749, 1, 0, 1310750, 1, 0, 1310751, 1, 0, 1310752, 1, 0, 1310753, 1, 0, 1310754, 1, 0, 1310755, 1, 0, 1310756, 1, 0, 1245210, 1, 0, 1310757, 1, 0, 1245222, 1, 0, 1245223, 1, 0, 1179687, 1, 0, 1179688, 1, 0, 1179689, 1, 0, 1114153, 1, 0, 1114154, 1, 0, 1048618, 1, 0, 1048619, 1, 0, 983083, 1, 0, 1048617, 1, 0, 1114152, 1, 0, 1245221, 1, 0, 1179685, 1, 0, 1179686, 1, 0, 1114150, 1, 0, 1114151, 1, 0, 1048615, 1, 0, 1048616, 1, 0, 983081, 1, 0, 917545, 1, 0, 917546, 1, 0, 852010, 1, 0, 786475, 1, 0, 852011, 1, 0, 983082, 1, 0, 720940, 1, 0, 655404, 1, 0, 655405, 1, 0, 589869, 1, 0, 524333, 1, 0, 589868, 1, 0, 786476, 1, 0, 917547, 1, 0, 917548, 1, 0, 852012, 1, 0, 720941, 1, 0, 1310760, 1, 0, 1310759, 1, 0, 1310758, 1, 0, 1310761, 1, 0, 1245226, 1, 0, 1245227, 1, 0, 1245228, 1, 0, 1179692, 1, 0, 1114156, 1, 0, 1048620, 1, 0, 983084, 1, 0, 1114155, 1, 0, 1179691, 1, 0, 1245225, 1, 0, 1179690, 1, 0, 917549, 1, 0, 852013, 1, 0, 786478, 1, 0, 720942, 1, 0, 852014, 1, 0, 917550, 1, 0, 983085, 1, 0, 1048621, 1, 0, 1310763, 1, 0, 1310762, 1, 0, 1376298, 1, 0, 1376296, 1, 0, 1376295, 1, 0, 1245224, 1, 0, 1376297, 1, 0, 1114157, 1, 0, 1179694, 1, 0, 1245230, 1, 0, 1310766, 1, 0, 1245231, 1, 0, 1179695, 1, 0, 1310765, 1, 0, 1376301, 1, 0, 1376300, 1, 0, 1310764, 1, 0, 1376299, 1, 0, 1441835, 1, 0, 1179693, 1, 0, 1245229, 1, 0, 1048622, 1, 0, 983086, 1, 0, 1114158, 1, 0, 1310767, 1, 0, 1376303, 1, 0, 1114159, 1, 0, 1048623, 1, 0, 983087, 1, 0, 917551, 1, 0, 983088, 1, 0, 1048624, 1, 0, 1114160, 1, 0, 1179696, 1, 0, 1245232, 1, 0, 917552, 1, 0, 852016, 1, 0, 786480, 1, 0, 720944, 1, 0, 1310768, 1, 0, 1376302, 1, 0, 1376304, 1, 0, 1376305, 1, 0, 1310769, 1, 0, 1245233, 1, 0, 1179697, 1, 0, 1114161, 1, 0, 1048625, 1, 0, 983089, 1, 0, 917553, 1, 0, 852017, 1, 0, 852018, 1, 0, 786482, 1, 0, 720945, 1, 0, 655409, 1, 0, 917554, 1, 0, 983090, 1, 0, 1048626, 1, 0, 1114162, 1, 0, 1179698, 1, 0, 1245234, 1, 0, 1310770, 1, 0, 1376306, 1, 0, 1048627, 1, 0, 983091, 1, 0, 917555, 1, 0, 1114163, 1, 0, 1179699, 1, 0, 1245235, 1, 0, 1310771, 1, 0, 1376307, 1, 0, 1179700, 1, 0, 1245236, 1, 0, 1310772, 1, 0, 1310773, 1, 0, 1376309, 1, 0, 1245237, 1, 0, 1179701, 1, 0, 1114164, 1, 0, 1048628, 1, 0, 983092, 1, 0, 1376308, 1, 0, 720943, 1, 0, 786479, 1, 0, 786477, 1, 0, 852015, 1, 0, 786481, 1, 0, 655408, 1, 0, 655407, 1, 0, 655406, 1, 0, 589870, 1, 0, 524334, 1, 0, 524335, 1, 0, 458799, 1, 0, 393263, 1, 0, 327727, 1, 0, 458798, 1, 0, 393262, 1, 0, 393264, 1, 0, 393265, 1, 0, 458801, 1, 0, 458802, 1, 0, 524338, 1, 0, 589874, 1, 0, 655410, 1, 0, 720946, 1, 0, 524337, 1, 0, 524336, 1, 0, 589873, 1, 0, 458800, 1, 0, 589871, 1, 0, 589872, 1, 0, 327728, 1, 0, 327729, 1, 0, 327730, 1, 0, 327731, 1, 0, 327732, 1, 0, 393268, 1, 0, 458805, 1, 0, 524341, 1, 0, 589877, 1, 0, 655413, 1, 0, 720949, 1, 0, 786485, 1, 0, 852020, 1, 0, 917556, 1, 0, 983093, 1, 0, 917557, 1, 0, 852021, 1, 0, 786484, 1, 0, 1048629, 1, 0, 720947, 1, 0, 1114165, 1, 0, 720948, 1, 0, 786483, 1, 0, 852019, 1, 0, 655411, 1, 0, 589875, 1, 0, 524339, 1, 0, 458803, 1, 0, 393267, 1, 0, 589876, 1, 0, 655412, 1, 0, 524340, 1, 0, 393266, 1, 0, 458804, 1, 0, 1441787, 1, 0, 1441788, 1, 0, 1441789, 1, 0, 1441790, 1, 0, 1441791, 1, 0, 1376256, 1, 0, 1441793, 1, 0, 1441794, 1, 0, 1441795, 1, 0, 1441796, 1, 0, 1441797, 1, 0, 1441798, 1, 0, 1441799, 1, 0, 1441800, 1, 0, 1441801, 1, 0, 1441802, 1, 0, 1441803, 1, 0, 1441804, 1, 0, 1441805, 1, 0, 1441806, 1, 0, 1441807, 1, 0, 1441808, 1, 0, 1441809, 1, 0, 1376273, 1, 0, 1376274, 1, 0, 1376275, 1, 0, 1376276, 1, 0, 1376277, 1, 0, 1376278, 1, 0, 1376279, 1, 0, 1376280, 1, 0, 1376281, 1, 0, 1376282, 1, 0, 1376283, 1, 0, 1376284, 1, 0, 1376285, 1, 0, 1376286, 1, 0, 1376287, 1, 0, 1376288, 1, 0, 1441824, 1, 0, 1441825, 1, 0, 1441826, 1, 0, 1441827, 1, 0, 1441828, 1, 0, 1376292, 1, 0, 1376293, 1, 0, 1376294, 1, 0, 1441829, 1, 0, 1441823, 1, 0, 1441822, 1, 0, 1441821, 1, 0, 1441820, 1, 0, 1441819, 1, 0, 1441811, 1, 0, 1441810, 1, 0, 1441812, 1, 0, 1441813, 1, 0, 1441814, 1, 0, 1441815, 1, 0, 1441816, 1, 0, 1441817, 1, 0, 1441818, 1, 0, 1441830, 1, 0, 1441831, 1, 0, 1441832, 1, 0, 1507365, 1, 0, 1507364, 1, 0, 1507363, 1, 0, 1507362, 1, 0, 1376289, 1, 0, 1376290, 1, 0, 1376291, 1, 0, 1376263, 1, 0, 1376262, 1, 0, 1376261, 1, 0, 1376260, 1, 0, 1376259, 1, 0, 1376258, 1, 0, 1376257, 1, 0, 1376272, 1, 0, 1376271, 1, 0, 1376270, 1, 0, 1376269, 1, 0, 1376264, 1, 0, 1376265, 1, 0, 1376266, 1, 0, 1376267, 1, 0, 1376268, 1, 0, 1441792, 1, 0, 1507327, 1, 0, 1507326, 1, 0, 1507325, 1, 0, 1572861, 1, 0, 1572862, 1, 0, 1572863, 1, 0, 1507328, 1, 0, 1507329, 1, 0, 1507330, 1, 0, 1572860, 1, 0, 1572859, 1, 0, 1572858, 1, 0, 1507331, 1, 0, 1507332, 1, 0, 1507333, 1, 0, 1507334, 1, 0, 1507335, 1, 0, 1507336, 1, 0, 1507337, 1, 0, 1507338, 1, 0, 1507339, 1, 0, 1507340, 1, 0, 1507341, 1, 0, 1507342, 1, 0, 1507343, 1, 0, 1507344, 1, 0, 1507345, 1, 0, 1507346, 1, 0, 1507361, 1, 0, 1507360, 1, 0, 1507359, 1, 0, 1507358, 1, 0, 1507357, 1, 0, 1507356, 1, 0, 1507355, 1, 0, 1507354, 1, 0, 1507353, 1, 0, 1507352, 1, 0, 1507351, 1, 0, 1507350, 1, 0, 1507349, 1, 0, 1507348, 1, 0, 1507347, 1, 0, 1572882, 1, 0, 1572881, 1, 0, 1572880, 1, 0, 1572879, 1, 0, 1572878, 1, 0, 1572877, 1, 0, 1572876, 1, 0, 1572875, 1, 0, 1572874, 1, 0, 1572873, 1, 0, 1572872, 1, 0, 1638408, 1, 0, 1638407, 1, 0, 1638406, 1, 0, 1638405, 1, 0, 1638404, 1, 0, 1638403, 1, 0, 1638402, 1, 0, 1638401, 1, 0, 1638400, 1, 0, 1638399, 1, 0, 1638398, 1, 0, 1638397, 1, 0, 1638396, 1, 0, 1638395, 1, 0, 1638394, 1, 0, 1507323, 1, 0, 1507322, 1, 0, 1507324, 1, 0, 1572866, 1, 0, 1572865, 1, 0, 1572864, 1, 0, 1572867, 1, 0, 1572868, 1, 0, 1572869, 1, 0, 1572870, 1, 0, 1572871, 1, 0, 1572883, 1, 0, 1572884, 1, 0, 1572885, 1, 0, 1572886, 1, 0, 1572887, 1, 0, 1572888, 1, 0, 1572889, 1, 0, 1507366, 1, 0, 1507367, 1, 0, 1507368, 1, 0, 1507369, 1, 0, 1572901, 1, 0, 1572900, 1, 0, 1572899, 1, 0, 1572898, 1, 0, 1572897, 1, 0, 1572896, 1, 0, 1572895, 1, 0, 1572894, 1, 0, 1572893, 1, 0, 1572892, 1, 0, 1572891, 1, 0, 1572890, 1, 0, 1245181, 1, 0, 1310716, 1, 0, 1310717, 1, 0, 1376253, 1, 0, 1376252, 1, 0, 1376251, 1, 0, 1441786, 1, 0, 1441784, 1, 0, 1507320, 1, 0, 1507321, 1, 0, 1572857, 1, 0, 1638393, 1, 0, 1441785, 1, 0, 1376249, 1, 0, 1572856, 1, 0, 1638392, 1, 0, 1703928, 1, 0, 1703929, 1, 0, 1703930, 1, 0, 1703931, 1, 0, 1703932, 1, 0, 1703933, 1, 0, 1703934, 1, 0, 1703935, 1, 0, 1638409, 1, 0, 1638410, 1, 0, 1638411, 1, 0, 1638412, 1, 0, 1638413, 1, 0, 1638414, 1, 0, 1638415, 1, 0, 1638416, 1, 0, 1638417, 1, 0, 1572902, 1, 0, 1572903, 1, 0, 1572904, 1, 0, 1572905, 1, 0, 1572906, 1, 0, 1572907, 1, 0, 1507372, 1, 0, 1507373, 1, 0, 1507374, 1, 0, 1572910, 1, 0, 1572909, 1, 0, 1572908, 1, 0, 1638442, 1, 0, 1638441, 1, 0, 1638440, 1, 0, 1638439, 1, 0, 1638438, 1, 0, 1638437, 1, 0, 1638436, 1, 0, 1638435, 1, 0, 1638434, 1, 0, 1638433, 1, 0, 1638432, 1, 0, 1703967, 1, 0, 1703966, 1, 0, 1703965, 1, 0, 1703964, 1, 0, 1703963, 1, 0, 1703962, 1, 0, 1703961, 1, 0, 1703960, 1, 0, 1703959, 1, 0, 1703958, 1, 0, 1703957, 1, 0, 1703956, 1, 0, 1703955, 1, 0, 1703954, 1, 0, 1703953, 1, 0, 1703952, 1, 0, 1769487, 1, 0, 1769486, 1, 0, 1769485, 1, 0, 1769484, 1, 0, 1769483, 1, 0, 1703947, 1, 0, 1703946, 1, 0, 1703948, 1, 0, 1703949, 1, 0, 1703950, 1, 0, 1703951, 1, 0, 1638420, 1, 0, 1638421, 1, 0, 1638422, 1, 0, 1638423, 1, 0, 1638424, 1, 0, 1638419, 1, 0, 1638418, 1, 0, 1638425, 1, 0, 1638426, 1, 0, 1638427, 1, 0, 1638428, 1, 0, 1638429, 1, 0, 1638430, 1, 0, 1638431, 1, 0, 1507370, 1, 0, 1507371, 1, 0, 1507375, 1, 0, 1507376, 1, 0, 1441840, 1, 0, 1441839, 1, 0, 1441838, 1, 0, 1441837, 1, 0, 1441836, 1, 0, 1441834, 1, 0, 1441833, 1, 0, 1507377, 1, 0, 1507378, 1, 0, 1507379, 1, 0, 1441841, 1, 0, 1441842, 1, 0, 1441843, 1, 0, 1310707, 1, 0, 1310708, 1, 0, 1376244, 1, 0, 1376243, 1, 0, 1441779, 1, 0, 1441780, 1, 0, 1441781, 1, 0, 1376245, 1, 0, 1507317, 1, 0, 1507318, 1, 0, 1441782, 1, 0, 1507315, 1, 0, 1572851, 1, 0, 1638387, 1, 0, 1703923, 1, 0, 1703924, 1, 0, 1638388, 1, 0, 1638389, 1, 0, 1572853, 1, 0, 1572852, 1, 0, 1703925, 1, 0, 1638390, 1, 0, 1572854, 1, 0, 1507316, 1, 0, 1703926, 1, 0, 1638391, 1, 0, 1572855, 1, 0, 1507319, 1, 0, 1441783, 1, 0, 1703927, 1, 0, 1703894, 1, 0, 1703895, 1, 0, 1703896, 1, 0, 1703897, 1, 0, 1769434, 1, 0, 1769435, 1, 0, 1769436, 1, 0, 1769437, 1, 0, 1769438, 1, 0, 1769439, 1, 0, 1769440, 1, 0, 1769441, 1, 0, 1769442, 1, 0, 1769443, 1, 0, 1769444, 1, 0, 1769445, 1, 0, 1769446, 1, 0, 1769447, 1, 0, 1703912, 1, 0, 1703913, 1, 0, 1703914, 1, 0, 1703915, 1, 0, 1703916, 1, 0, 1703911, 1, 0, 1703910, 1, 0, 1703909, 1, 0, 1703908, 1, 0, 1638371, 1, 0, 1638370, 1, 0, 1638369, 1, 0, 1638368, 1, 0, 1638367, 1, 0, 1638366, 1, 0, 1638365, 1, 0, 1703901, 1, 0, 1703900, 1, 0, 1703899, 1, 0, 1703898, 1, 0, 1703893, 1, 0, 1703892, 1, 0, 1703891, 1, 0, 1703890, 1, 0, 1769428, 1, 0, 1769429, 1, 0, 1769431, 1, 0, 1769432, 1, 0, 1769427, 1, 0, 1769426, 1, 0, 1834965, 1, 0, 1834966, 1, 0, 1834967, 1, 0, 1834968, 1, 0, 1834969, 1, 0, 1834970, 1, 0, 1834971, 1, 0, 1834972, 1, 0, 1834973, 1, 0, 1769448, 1, 0, 1769449, 1, 0, 1769450, 1, 0, 1703907, 1, 0, 1703906, 1, 0, 1703905, 1, 0, 1703904, 1, 0, 1703903, 1, 0, 1703902, 1, 0, 1769433, 1, 0, 1769425, 1, 0, 1769424, 1, 0, 1769423, 1, 0, 1703887, 1, 0, 1638351, 1, 0, 1572815, 1, 0, 1507279, 1, 0, 1441743, 1, 0, 1376207, 1, 0, 1376208, 1, 0, 1441744, 1, 0, 1507280, 1, 0, 1572816, 1, 0, 1638352, 1, 0, 1703888, 1, 0, 1703889, 1, 0, 1638354, 1, 0, 1572818, 1, 0, 1638353, 1, 0, 1769451, 1, 0, 1769452, 1, 0, 1769453, 1, 0, 1769454, 1, 0, 1769455, 1, 0, 1703919, 1, 0, 1703920, 1, 0, 1703921, 1, 0, 1703918, 1, 0, 1703917, 1, 0, 1769458, 1, 0, 1769459, 1, 0, 1769457, 1, 0, 1769456, 1, 0, 1703922, 1, 0, 1638386, 1, 0, 1638385, 1, 0, 1769430, 1, 0)

[node name="Water" type="Polygon2D" parent="." groups=["water_puddles"]]
color = Color(0.262745, 0.356863, 1, 1)
polygon = PackedVector2Array(-1503, 645, -414, 646, -416, 761, -474, 765, -482, 797, -888, 797, -886, 771, -1126, 767, -1122, 797, -1441, 795, -1435, 729, -1475, 737, -1473, 765, -1497, 765)
script = ExtResource("10_5an84")

[node name="Water2" type="Polygon2D" parent="." groups=["water_puddles"]]
position = Vector2(2337, -99)
color = Color(0.262745, 0.356863, 1, 1)
polygon = PackedVector2Array(-1600, 645, -1118, 645, -1121, 671, -1154, 672, -1154, 738, -1467, 740, -1471, 705, -1565, 704, -1568, 675, -1599, 675)
script = ExtResource("10_5an84")

[node name="Humidity" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("11_nmlqm")
water_evaporation_per_tick = 1.0
max_air_humidity = 20.0
max_humidity_change = 5.0
humidity_transfer_speed = 0.001
humidity_elevation_speed = 1.0
max_moisture_height = -7

[node name="Temperature" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("12_73asx")
default_temperature = 30.0
altitude_temperature_change = 1.0

[node name="SelectedArea" type="Panel" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_es8a2")

[node name="Tick" type="Timer" parent="."]
autostart = true

[node name="CloudDrawer" type="Node2D" parent="."]
script = ExtResource("13_wwyc4")

[connection signal="timeout" from="Tick" to="Humidity" method="_on_tick_timeout"]
